minor updates to get dan's rmd working

--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -74,7 +74,8 @@ suppressPackageStartupMessages(c(
   library(rtracklayer),
   library(poibin),
   library(flextable),
-  library(plot3D)
+  library(plot3D),
+  library(ggfortify)
 ))
 ```
 
