--- a/code/supplemental_v2.Rmd
+++ b/code/supplemental_v2.Rmd
@@ -442,9 +442,12 @@ s4plot <- function(x) {
   d <- x[,"end2"]
   e <- x[,"start3"]
   f <- x[,"end3"]
+  path01<- pathorder[a:b]
+  path02<- pathorder[c:d]
+  path03<- pathorder[e:f]
 par(mfrow = c(2,3), mai = c(0.1, 0.1, 0.1, 0.1))
 par(mar = c(2,2,0,0))
-for(n in pathorder[x[,"start1"]:x[,"end1"]]) {
+for(n in path01) { #pathorder[x[,"start1"]:x[,"end1"]]
   pathname <- as.data.frame(strsplit(n, " ")) ## split string into word
   pathname <- pathname[,1] ## get the character vectors
   with(selected_path %>% 
@@ -510,92 +513,83 @@ legend("top", inset = c(0.06), legend=path2, bty = "n", horiz = T, cex = 0.9)
 }
 }
 
-a = 1
-b = 6
-c = 7
-d = 12
-e = 13
-f = 15
 
-for(p in 1:nrow(startingpointlist)-1) {
-  data <- startingpointlist[p,]
-  s4plot(x = data)
+data <- startingpointlist[1,]
+s4plot(x = data)
+data <- startingpointlist[2,]
+s4plot(x = data)
+data <- startingpointlist[3,]
+s4plot(x = data)
+data <- startingpointlist[4,]
+s4plot(x = data)
+data <- startingpointlist[5,]
+s4plot(x = data)
+data <- startingpointlist[6,]
+s4plot(x = data)
+data <- startingpointlist[7,]
+s4plot(x = data)
+data <- startingpointlist[8,]
+s4plot(x = data)
+data <- startingpointlist[9,]
+s4plot(x = data)
+data <- startingpointlist[10,]
+s4plot(x = data)
+data <- startingpointlist[11,]
+s4plot(x = data)
+data <- startingpointlist[12,]
+s4plot(x = data)
+data <- startingpointlist[13,]
+s4plot(x = data)
+data <- startingpointlist[14,]
+s4plot(x = data)
+data <- startingpointlist[15,]
+s4plot(x = data)
+data <- startingpointlist[16,]
+s4plot(x = data)
+data <- startingpointlist[17,]
+s4plot(x = data)
+data <- startingpointlist[18,]
+s4plot(x = data)
+data <- startingpointlist[19,]
+s4plot(x = data)
+data <- startingpointlist[20,]
+s4plot(x = data)
+data <- startingpointlist[21,]
+s4plot(x = data)
+data <- startingpointlist[22,]
+s4plot(x = data)
+data <- startingpointlist[23,]
+s4plot(x = data)
+data <- startingpointlist[24,]
+s4plot(x = data)
+data <- startingpointlist[25,]
+s4plot(x = data)
+
+par(mfrow = c(2,3), mai = c(0.1, 0.1, 0.1, 0.1))
+par(mar = c(2,2,0,0))
+for(n in pathorder[376:377]) { 
+  pathname <- as.data.frame(strsplit(n, " ")) ## split string into word
+  pathname <- pathname[,1] ## get the character vectors
+  with(selected_path %>% 
+       filter(variable == n),
+     scatter3D(plot_y, -plot_z, plot_x, 
+                                bg = "grey", pch = 21, cex = 0.8, lwd = 0.2,
+                                theta = 0, phi = 65, scale = F,
+               xlim = c(-6, 4.5), zlim = c(-4.5, 4), ylim = c(-4, 5),
+                                xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
+                                colvar = NULL))
+title(xlab="UMAP 2", line=0)
+path1 <- paste0(pathname[1], " ", pathname[2], " ", pathname[3], " ", pathname[4], " ")
+path1 <- gsub("NA", "", path1)
+path2 <- paste0(pathname[5], " ", pathname[6], " ", pathname[7], " ", pathname[8], " ")
+path2 <- gsub("NA", "", path2)
+legend("top", inset = c(0.01), legend=path1, bty = "n", horiz = T, cex = 0.9)
+legend("top", inset = c(0.06), legend=path2, bty = "n", horiz = T, cex = 0.9)
 }
-
-
-# par(mfrow = c(2,3), mai = c(0.1, 0.1, 2, 0.1))
-# par(mar = c(2,2,0,0))
-# for(n in genes[7:12]) {
-# with(selected_mut %>% 
-#        filter(variable == n),
-#      scatter3D(plot_y, -plot_z, plot_x, 
-#                                 bg = "grey", pch = 21, cex = 0.8, lwd = 0.2,
-#                                 theta = 0, phi = 65, scale = F,
-#                xlim = c(-6, 4.5), zlim = c(-4.5, 4), ylim = c(-4, 5),
-#                                 xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
-#                                 colvar = NULL))
-# title(xlab="UMAP 2", line=0)
-# legend("top", inset = c(0), legend=n, bty = "n", horiz = T, cex = 1.2)
-# }
-# par(mfrow = c(2,3), mai = c(0.1, 0.1, 0.1, 0.1))
-# par(mar = c(2,2,0,0))
-# for(n in genes[13:15]) {
-# with(selected_mut %>% 
-#        filter(variable == n),
-#      scatter3D(plot_y, -plot_z, plot_x, 
-#                                 bg = "grey", pch = 21, cex = 0.8, lwd = 0.2,
-#                                 theta = 0, phi = 65, scale = F,
-#                xlim = c(-6, 4.5), zlim = c(-4.5, 4), ylim = c(-4, 5),
-#                                 xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
-#                                 colvar = NULL))
-# title(xlab="UMAP 2", line=0)
-# legend("top", inset = c(0), legend=n, bty = "n", horiz = T, cex = 1.2)
-# }
-
 ```
 **Supplementary Figure S4. Projection of pathway disruptions onto the UMAP.** Each panel shows one of 377 Reactome
 pathways projected on the UMAP from **Figure 1D of the main text** ordered by the hierarchical pathway order 
 (column) from **Figure 2C of the main text**.
-
-
-```{r supplementary-figure-s4, message = FALSE, echo = FALSE, out.width = '90%', fig.align= 'center', eval = FALSE}
-load("../data/fig_s4_ggplot.Rda")
-
-ggplot_umap_1
-ggplot_umap_2
-ggplot_umap_3
-ggplot_umap_4
-ggplot_umap_5
-ggplot_umap_6
-ggplot_umap_7
-ggplot_umap_8
-ggplot_umap_9
-ggplot_umap_10
-ggplot_umap_11
-ggplot_umap_12
-ggplot_umap_13
-ggplot_umap_14
-ggplot_umap_15
-ggplot_umap_16
-
-# ggplot(selected_path, aes(x = x_2d, y = y_2d, colour = as.character(value))) + 
-#   geom_point(data = umap_bg, aes(x = x_2d, y = y_2d), colour = "grey", size = 0.5) +
-#   geom_point(size = 0.5) +
-#   theme_classic() +
-#   coord_fixed() +
-#   xlab("UMAP 1") + ylab("UMAP 2") +
-#   scale_colour_manual(values = rep("firebrick3", 20)) +
-#   theme(axis.text.x = element_blank(),
-#     axis.text.y = element_blank(),
-#     axis.title.x = element_blank(),
-#     axis.title.y = element_blank(),
-#     axis.ticks = element_blank(),
-#     axis.line = element_blank(),
-#     legend.position = "none") +
-#   facet_wrap(~ factor(variable, levels = toppath),
-#                       ncol = 5) ## facet by pathways
-
-```
 
 \newpage
 
@@ -620,7 +614,7 @@ gc()
 gdc_mut_count_patient[gdc_mut_count_patient > 0] <- 1 ## booleanize data, anything greater than 1 is equal to 1
 
 ## class 7 and 8 distinguishing genes
-genes <- c("PIK3CA", "KRAS", "TP53")
+genes <- c("AKT2","BCL2","CTNNB1","ERBB2","KRAS","PIK3CA","CDKN2C","PTEN","RB1","SMARCA4","TP53","VHL")
 
 selected_mut <- gene_data %>% dplyr::select(external_gene_name, ensembl_gene_id) %>% filter(external_gene_name %in% genes) ## getting ensembl_id for the genes for filtering gdc data
 
@@ -639,38 +633,43 @@ save(s5_data, file = "../data/s5_data.Rda")
 ```
 
 ```{r supplemental-s5-plot, fig.width=9}
-umap_cancertype <- data.table::fread("../data/umap_3d_coors.tsv")
-
-umap_cancertype$clust_knn <- as.character(umap_cancertype$clust_knn)
-
-clusters178 <- umap_cancertype %>% 
-       mutate(color = case_when(clust_knn %in% c("1", "7", "8") ~ clust_knn,
-                                  TRUE ~ "Other"))
-
-I_outlines <- c("black", "black", "black", "#00000000")
-names(I_outlines) <- c("1", "7", "8", "Other")
-
-I_colors <- c("gold2", "gray51", "springgreen4", "#00000011")
-names(I_colors) <- c("1", "7", "8", "Other")
+# umap_cancertype <- data.table::fread("../data/umap_3d_coors.tsv")
+# 
+# umap_cancertype$clust_knn <- as.character(umap_cancertype$clust_knn)
+# 
+# clusters178 <- umap_cancertype %>% 
+#        mutate(color = case_when(clust_knn %in% c("1", "7", "8") ~ clust_knn,
+#                                   TRUE ~ "Other"))
+# 
+# I_outlines <- c("black", "black", "black", "#00000000")
+# names(I_outlines) <- c("1", "7", "8", "Other")
+# 
+# I_colors <- c("gold2", "gray51", "springgreen4", "#00000011")
+# names(I_colors) <- c("1", "7", "8", "Other")
+# 
+# load("../data/s5_data.Rda")
+# genes <- as.character(unique(s5_data$variable))
+# 
+# par(mfrow = c(2,3), mai = c(0.1, 0.1, 0.1, 0.1))
+# par(mar = c(2,2,0,0))
+# plot.new()
+# with(clusters178, 
+#      scatter3D(plot_y, -plot_z, plot_x, 
+#                                 bg = I_colors[color], col = I_outlines[color],
+#                                 pch = 21, cex = 0.8, lwd = 0.2,
+#                                 theta = 0, phi = 65, scale = F,
+#                                 xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
+#                                 colvar = NULL))
+# legend("top", inset = c(0.05), legend=names(I_colors[c(1:3)]), col=I_colors[c(1:3)], pch = 20, bty = "n", horiz = T, cex = 1.2)
+# title(xlab="UMAP 2", line=0)
+# plot.new()
 
 load("../data/s5_data.Rda")
-genes <- as.character(unique(s5_data$variable))
+genes <- c("AKT2","BCL2","CTNNB1","ERBB2","KRAS","PIK3CA","CDKN2C","PTEN","RB1","SMARCA4","TP53","VHL")
 
 par(mfrow = c(2,3), mai = c(0.1, 0.1, 0.1, 0.1))
 par(mar = c(2,2,0,0))
-plot.new()
-with(clusters178, 
-     scatter3D(plot_y, -plot_z, plot_x, 
-                                bg = I_colors[color], col = I_outlines[color],
-                                pch = 21, cex = 0.8, lwd = 0.2,
-                                theta = 0, phi = 65, scale = F,
-                                xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
-                                colvar = NULL))
-legend("top", inset = c(0.05), legend=names(I_colors[c(1:3)]), col=I_colors[c(1:3)], pch = 20, bty = "n", horiz = T, cex = 1.2)
-title(xlab="UMAP 2", line=0)
-plot.new()
-
-for(n in genes) {
+for(n in genes[1:6]) {
 with(s5_data %>% 
        filter(variable == n),
      scatter3D(plot_y, -plot_z, plot_x, 
@@ -682,10 +681,24 @@ with(s5_data %>%
 title(xlab="UMAP 2", line=0)
 legend("top", inset = c(0), legend=n, bty = "n", horiz = T, cex = 1.2)
 }
+
+par(mfrow = c(2,3), mai = c(0.1, 0.1, 0.1, 0.1))
+par(mar = c(2,2,0,0))
+for(n in genes[7:12]) {
+with(s5_data %>% 
+       filter(variable == n),
+     scatter3D(plot_y, -plot_z, plot_x, 
+                                bg = "grey", pch = 21, cex = 0.8, lwd = 0.2,
+                                theta = 0, phi = 65, scale = F,
+               xlim = c(-6, 4.5), zlim = c(-4.5, 4), ylim = c(-4, 5),
+                                xlab = "", ylab = "UMAP 3", zlab = "UMAP 1",
+                                colvar = NULL))
+title(xlab="UMAP 2", line=0)
+legend("top", inset = c(0), legend=n, bty = "n", horiz = T, cex = 1.2)
+}
+
 ```
-**Supplementary Figure S5. Distribution of oncogenes on UMAP clusters.** The left panel shows the identity of 
-clusters 1, 7 and 8. The multipanel on the right shows one of the three oncogenes projected onto the tumors of 
-the UMAP from **Figure 2C of the main text**.
+**Supplementary Figure S5. Distribution of oncogenes/tumor suppressors on UMAP clusters.** Each panel shows shows one of the twelve oncogenes/tumor suppressors projected onto the tumors of the UMAP from **Figure 2C of the main text**.
 
 \newpage 
 ```{r supplemental-table-st1-data-generation, eval = FALSE}
