--- a/text/fig_legend.Rmd
+++ b/text/fig_legend.Rmd
@@ -53,7 +53,47 @@ significant genes as described above. The heatmap shows the proportion of sample
 per cluster, per cancer type that is mutated for each of the significant genes. 
 Depleted significant genes (left). Enriched significant genes (right).
 
-**Figure 7: **
+**Figure 7: ** Comparison of different cancers, simulated and actual
+results results. A) To understand the risk model, we plot survival of
+four simulated cohorts. Compare survival of a group consisting of
+randomly selected 30 year old women (light blue) to an equal sized
+group of 30 year old women with cancer, k = 2 (light orange). To
+understand how the mix of ages alters the survival curve, we compare a
+randomly selected group of people with ages uniformly distributed from
+30 to 70 (dark blue) and a randomly selected group with uniformly
+distributed ages and cancer k = 2 (dark orange). B,C,D,E) We compare a
+randomly selected group with correct age distribution for the given
+cancer (blue) to the model predicted survival for the given average k
+(red) and the actual survival for the patients in our dataset (CHOOSE
+COLOR HERE, NOT GREEN). As can be seen, Stomach Cancer (STAD),
+Glioblastoma (GBM), and Pancreatic Cancer (PAAD) are all very
+deadly. The modeled results fit the general trend for the actual
+patients. Thyroid Cancer (THCA) on the other hand has very little if
+any effect on life expectancy, in fact there may be a slight benefit
+which may be associated with a bias in diagnosis towards patients who
+are more health conscious, or higher socioeconomic status, with more
+access to care compared to random population members.
+
+**Figure 8** Tissue specific effects are compared by showing the
+probability density for the posterior value of the k_tis
+multiplier. These values reflect the general deadliness of the cancer
+type across all clusters. GBM, PAAD, and SKCM stand out as having
+values in the 10 to 20 range with a wide degree of uncertainty. Other
+cancers such as Prostate (PRAD) and Thyroid (THCA) show values down
+near or even below 1 suggesting that these populations may have
+healthier lifestyles and more access to care. Most cancer types fall
+in the range 2-7 as might be expected.
+
+**Figure 9** Class specific $k_class$ values shown for each cancer
+type. The overall $k$ value is the product of $k_tis \times
+k_class$. The class specific value shows the relative aggressiveness
+of that particular class within the tissue. For example class 1, 2,
+and 6 Glioblastoma (GBM) are apparently much less deadly than other
+types of GBM. A similar situation can be seen with Pancreatic Cancer
+(PAAD) where 1, 6, and 8 are less deadly compared to classes 7,
+9, 10. For some cancer types there are few data points and little
+ability to estimate values with precision (DLBC and KICH for example).
+
 
 **Table 1: Cluster-specific enriched pathways (effect size >= 0.30) in metastatsis.**
 
