--- a/text/survival.Rmd
+++ b/text/survival.Rmd
@@ -41,8 +41,8 @@ have relatively healthy behaviors, are seen regularly by doctors, and comply
 with health recommendations.
 
 The degree to which a given cancer accelerates aging can be determined by the
-$k_{tis}$ multiplier (**Figure 7F**) multiplied by the class specific modifier
-(**Figure 7G**). Looking at the tissue specific multiplier, the least deadly was
+$k_{tis}$ multiplier (**Figure 8**) multiplied by the class specific modifier
+(**Figure 9**). Looking at the tissue specific multiplier, the least deadly was
 prostate cancer (PRAD), and the most deadly was glioblastoma (GBM) which has a
 risk multiplier of between 15 and 22 relative to the background risk of death in
 the population. This undoubtedly is influenced by the fact that relatively young
@@ -56,7 +56,7 @@ information that they have the given cancer.
 
 Our estimates of tissue-specific class effects, in contrast, ranged from less
 than 1 up to about 3 or 4, reflecting that some classes are either less deadly
-or more deadly than other classes within each cancer types (**Figure 7G**). A
+or more deadly than other classes within each cancer types (**Figure 9**). A
 class specific rate of 1 represents typical rate for this tissue type. For
 several cancers ( _e.g._ PRAD, kidney chromophobe (KICH), diffuse large B-cell
 lymphoma (DBLC), thyroid cancer (THCA)) the posterior estimates are largely
